feat: add drop partition api
